@@ -63,6 +63,7 @@ Usage example
 
 import re
 import os
+import string
 import sys
 
 import ClusterShell.NodeUtils as NodeUtils
@@ -109,7 +110,7 @@ class NodeSetParseError(NodeSetError):
     """Raised when NodeSet parsing cannot be done properly."""
     def __init__(self, part, msg):
         if part:
-            msg = "%s : \"%s\"" % (msg, part)
+            msg = "%s: \"%s\"" % (msg, part)
         NodeSetError.__init__(self, msg)
         # faulty part; this allows you to target the error
         self.part = part
@@ -996,19 +997,23 @@ class ParsingEngine(object):
                         if bra_start == -1:
                             bra_start = bra_end + 1
                         if bra_end >= 0 and bra_end < bra_start:
-                            raise NodeSetParseError(sfx, \
-                                                    "illegal closing bracket")
-                    pfxlen = len(pfx)
+                            msg = "illegal closing bracket"
+                            raise NodeSetParseError(sfx, msg)
+
+                    pfxlen, sfxlen = len(pfx), len(sfx)
 
                     # pfx + sfx cannot be empty
-                    if pfxlen + len(sfx) == 0:
+                    if pfxlen + sfxlen == 0:
                         raise NodeSetParseError(pat, "empty node name")
 
-                    # but pfx itself can
+                    if sfxlen > 0:
+                        sfx, rng = self._amend_outer_digits(sfx, rng,
+                                                            trailing=True)
+
                     if pfxlen > 0:
-                        if pfx[-1] in "0123456789":
-                            raise NodeSetParseError(pfx + "[", "illegal opening"
-                                                    " bracket after digit")
+                        pfx, rng = self._amend_outer_digits(pfx, rng)
+
+                        # scan pfx as a single node (no bracket)
                         pfx, pfxrvec = self._scan_string_single(pfx, autostep)
                         rsets += pfxrvec
 
@@ -1019,11 +1024,11 @@ class ParsingEngine(object):
 
                     # Check for empty component or sequenced ranges
                     if len(pfx) == 0 and op_idx == 0:
-                        raise NodeSetParseError(sfx, "empty node name before")\
+                        raise NodeSetParseError(sfx, "empty node name before")
 
-                    if len(sfx) > 0 and sfx[0] in "0123456789[":
-                        raise NodeSetParseError(sfx, \
-                                "illegal sequenced numeric ranges")
+                    if len(sfx) > 0 and sfx[0] == '[':
+                        raise NodeSetParseError(sfx,
+                                                "illegal reopening bracket")
 
                     newpat += "%s%%s" % pfx
                     try:
@@ -1084,6 +1089,47 @@ class ParsingEngine(object):
                 yield op_code, newpat, rsets[0]
             else:
                 yield op_code, newpat, None
+
+    def _amend_outer_digits(self, outer, inner, trailing=False):
+        """Helper to get rid of leading/trailing bracket digits.
+
+        Take a bracket outer prefix/suffix string and an inner range set
+        string and return amended strings.
+        """
+        if trailing:
+            # handle digits prefix after bracket (eg. n[0-1]01):
+            outerstrip = outer.lstrip(string.digits)
+        else:
+            # handle digits prefix before bracket (eg. n01[0-1]):
+            outerstrip = outer.rstrip(string.digits)
+
+        # check for leading/trailing digits
+        outerlen, outerstriplen = len(outer), len(outerstrip)
+        if outerstriplen < outerlen:
+            # step syntax is not compatible with trailing digits
+            if trailing and '/' in inner:
+                msg = "illegal trailing digits after range with steps"
+                raise NodeSetParseError(outer, msg)
+
+            # get outer leading/trailing digits
+            if trailing:
+                outerdigits = outer[0:outerlen - outerstriplen]
+            else:
+                outerdigits = outer[outerstriplen:]
+
+            # update inner range string with digits added to each index
+            def concat_outerdigits(bound):
+                """Concatenate range bound digits and outerdigits"""
+                if trailing:
+                    return bound + outerdigits
+                else:
+                    return outerdigits + bound
+
+            inner = ','.join(('-'.join(concat_outerdigits(bound)
+                                       for bound in elem.split('-'))
+                             for elem in inner.split(',')))
+
+        return outerstrip, inner
 
 
 class NodeSet(NodeSetBase):
